--- a/main.css
+++ b/main.css
@@ -7,9 +7,14 @@
 }
 
 body {
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-
-}
+    background-image: url(./asset/pixelBG.gif);
+    background-repeat: repeat-y;
+    background-size: 110%;
+    background-color: #403660;
+    color: #233251;
+  
+    align-items: center;
+  }
 
 nav {
     background: #0082e6;
@@ -101,3 +106,50 @@ a.active, a:hover{
         left: 0;
     }
 }
+
+.container {
+    margin-left: 20px;
+    margin-top: 20px;
+    margin-right: 20px;
+    margin-bottom: 20px;
+    height: 650px;
+    display: flex;
+    justify-content: space-around;
+    backdrop-filter: blur(4px);
+    border: 3px solid black ;border-radius: 12px;
+  }
+
+#money{
+    width: 200px;
+    height: 100px;
+    border: 3px solid green;
+}
+
+#upgrade{
+    width: 200px;
+    height: 500px;
+    border: 3px solid green;
+}
+
+#pet{
+    width: 800px;
+    height: 600px;
+    border: 3px solid green;
+    text-align: center;
+}
+#pet img{
+    width: 400px;
+    margin-top: 90px;
+
+}
+#pet button{
+    width: 40px;
+    height: 40px;
+}
+
+#clicker{
+    width: 200px;
+    height: 600px;
+    border: 3px solid green;
+}
+
