--- a/about.css
+++ b/about.css
@@ -16,6 +16,42 @@ nav {
     height: 80px;
     width: 100%;
 }
+#profil{
+    margin-left: 80px;
+    margin-right: 80px;
+    display: grid;
+    grid-template-columns: 2fr 2fr;
+
+}
+
+h4{
+    text-align: center;
+}
+p{
+   margin-left: 10px;
+   margin-right: 10px; 
+}
+img{
+    border-radius: 50%;
+    margin-top: 10px;
+    margin-left: 200px;
+    width: 80px;
+    height: 80px;
+}
+
+#data{
+    margin-top: 20px;
+    height: 250px;
+    width: 500px;
+    border: 4px solid black ;
+}
+
+#about{
+    margin-left: 80px;
+    margin-top: 20px;
+    font-size: 30px;
+    font-weight: bold;
+}
 
 label.logo {
     color: white;
@@ -99,5 +135,37 @@ a.active, a:hover{
     }
     #check:checked ~ ul{
         left: 0;
+    }
+    #profil{
+        margin-left: 80px;
+        margin-right: 80px;
+        display: grid;
+        grid-template-columns: auto;
+    
+    }
+    h4{
+        text-align: center;
+    }
+    
+    img{
+        border-radius: 50%;
+        margin-top: 10px;
+        margin-left: 110px;
+        width: 80px;
+        height: 80px;
+    }
+    
+    #data{
+        margin-top: 20px;
+        height: 300px;
+        width: 300px;
+        border: 4px solid black ;
+    }
+    
+    #about{
+        margin-left: 80px;
+        margin-top: 20px;
+        font-size: 30px;
+        font-weight: bold;
     }
 }
