--- a/main.css
+++ b/main.css
@@ -12,7 +12,7 @@ body {
     background-size: 110%;
     background-color: #403660;
     color: #233251;
-  
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     align-items: center;
   }
 
@@ -113,33 +113,45 @@ a.active, a:hover{
     margin-right: 20px;
     margin-bottom: 20px;
     height: 650px;
-    display: flex;
-    justify-content: space-around;
+    /* display: flex;
+    justify-content: space-around; */
     backdrop-filter: blur(4px);
     border: 3px solid black ;border-radius: 12px;
-  }
+}
+
+#judul {
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+    margin-bottom: 20px;
+}
+
+#buy {
+    display: flex;
+    justify-content: space-around;
+}
 
 #money{
     width: 200px;
     height: 100px;
-    border: 3px solid green;
+    /* border: 3px solid green; */
 }
 
 #upgrade{
     width: 200px;
     height: 500px;
-    border: 3px solid green;
+    /* border: 3px solid green; */
 }
 
 #pet{
-    width: 800px;
-    height: 600px;
-    border: 3px solid green;
+    width: 100%;
+    /* border: 3px solid green; */
     text-align: center;
 }
 #pet img{
     width: 400px;
-    margin-top: 90px;
+    margin-top: 20px;
+    /* background-color: yellow; */
 
 }
 #pet button{
