--- a/main.css
+++ b/main.css
@@ -12,9 +12,9 @@ body {
     background-size: 110%;
     background-color: #403660;
     color: #233251;
-  
+
     align-items: center;
-  }
+}
 
 nav {
     background: #0082e6;
@@ -41,7 +41,7 @@ nav ul li {
     margin: 0 5px;
 }
 
-nav ul li a{
+nav ul li a {
     color: white;
     font-size: 17px;
     padding: 7px 13px;
@@ -49,12 +49,13 @@ nav ul li a{
     text-transform: uppercase;
 }
 
-a.active, a:hover{
+a.active,
+a:hover {
     background: #1b9bff;
     transition: .5s;
 }
 
-.checkbtn{
+.checkbtn {
     font-size: 30px;
     color: white;
     float: right;
@@ -63,24 +64,28 @@ a.active, a:hover{
     cursor: pointer;
     display: none;
 }
-#check{
+
+#check {
     display: none;
 }
 
-@media(max-width:952px){
-    label.logo{
+@media(max-width:952px) {
+    label.logo {
         font-size: 30px;
         padding-left: 50px;
     }
-    nav ul li a{
+
+    nav ul li a {
         font-size: 16px;
     }
 }
-@media(max-width:700px){
-    .checkbtn{
+
+@media(max-width:700px) {
+    .checkbtn {
         display: block;
     }
-    ul{
+
+    ul {
         position: fixed;
         width: 100%;
         height: 100vh;
@@ -90,19 +95,24 @@ a.active, a:hover{
         text-align: center;
         transition: all .5s;
     }
-    nav ul li{
+
+    nav ul li {
         display: block;
         margin: 50px 0;
         line-height: 30px;
     }
-    nav ul li a{
+
+    nav ul li a {
         font-size: 20px;
     }
-    a:hover,a.active{
+
+    a:hover,
+    a.active {
         background: none;
         color: #0082e6;
     }
-    #check:checked ~ ul{
+
+    #check:checked~ul {
         left: 0;
     }
 }
@@ -116,40 +126,82 @@ a.active, a:hover{
     display: flex;
     justify-content: space-around;
     backdrop-filter: blur(4px);
-    border: 3px solid black ;border-radius: 12px;
-  }
+    border: 3px solid black;
+    border-radius: 12px;
+}
 
-#money{
+#money {
+    margin-top: 10px;
     width: 200px;
     height: 100px;
     border: 3px solid green;
+    text-align: center;
 }
 
-#upgrade{
+#moneyCount {
+    font-size: 50px;
+}
+
+#upgrade {
     width: 200px;
     height: 500px;
     border: 3px solid green;
 }
 
-#pet{
+#pet {
+    margin-top: 10px;
     width: 800px;
     height: 600px;
-    border: 3px solid green;
     text-align: center;
 }
-#pet img{
+
+#pet img {
     width: 400px;
     margin-top: 90px;
 
 }
-#pet button{
+
+#pet button {
     width: 40px;
     height: 40px;
 }
 
-#clicker{
+#clicker {
+    margin-top: 10px;
     width: 200px;
     height: 600px;
-    border: 3px solid green;
 }
 
+#up {
+    align-items: center;
+    text-align: center;
+    margin-top: -50px;
+}
+
+#up img {
+    width: 180px;
+    margin-bottom: -70px;
+}
+
+#up p {
+    font-size: 32px;
+}
+
+#up button {
+    background-color: rgba(249, 249, 249, 0.398);
+    border-radius: 12px;
+    width: 70px;
+}
+
+#clicker{
+    text-align: center;
+    display: grid;
+    grid-template-columns: 200px;
+}
+#clicker div button{
+    margin-top: 40px;
+    width: 180px;
+    height: 180px;
+    background-color: rgba(249, 249, 249, 0.398);
+    border-radius: 50%;
+}
