--- a/about.css
+++ b/about.css
@@ -16,42 +16,6 @@ nav {
     height: 80px;
     width: 100%;
 }
-#profil{
-    margin-left: 80px;
-    margin-right: 80px;
-    display: grid;
-    grid-template-columns: 2fr 2fr;
-
-}
-
-h4{
-    text-align: center;
-}
-p{
-   margin-left: 10px;
-   margin-right: 10px; 
-}
-img{
-    border-radius: 50%;
-    margin-top: 10px;
-    margin-left: 200px;
-    width: 80px;
-    height: 80px;
-}
-
-#data{
-    margin-top: 20px;
-    height: 250px;
-    width: 500px;
-    border: 4px solid black ;
-}
-
-#about{
-    margin-left: 80px;
-    margin-top: 20px;
-    font-size: 30px;
-    font-weight: bold;
-}
 
 label.logo {
     color: white;
@@ -97,6 +61,60 @@ a.active, a:hover{
 #check{
     display: none;
 }
+
+
+
+#container{
+    margin: 20px;
+    margin-top: 20px;
+
+}
+
+#about{
+    font-family: Arial, Helvetica, sans-serif;
+    margin-left: 80px;
+    margin-top: 20px;
+    font-size: 30px;
+    
+}
+
+
+#profil{
+    margin-left: 80px;
+    margin-right: 80px;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+
+}
+
+#data{
+    margin-top: 20px;
+    height: 400px;
+    width: 250px;
+    background-color: gainsboro;
+    margin: 20px;
+    margin-left: 0;
+}
+
+img{
+    width: 250px;
+    height: 250px;
+}
+
+h4{
+    margin: 10px;
+    font-size: 14px;
+}
+p{
+   margin-left: 10px;
+   margin-top: none; 
+   font-size: 12px;
+}
+
+
+
+
+
 
 @media(max-width:952px){
     label.logo{
