--- a/main.css
+++ b/main.css
@@ -1,215 +1,216 @@
 * {
-    padding: 0;
-    margin: 0;
-    text-decoration: none;
-    list-style: none;
-    box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  text-decoration: none;
+  list-style: none;
+  box-sizing: border-box;
 }
 
 body {
-    background-image: url(./asset/pixelBG.gif);
-    background-repeat: repeat-y;
-    background-size: 110%;
-    background-color: #403660;
-    color: #233251;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    align-items: center;
+  background-image: url(./asset/pixelBG.gif);
+  background-repeat: repeat-y;
+  background-size: 110%;
+  background-color: #403660;
+  color: #233251;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  align-items: center;
 }
 
 nav {
-    background: #0082e6;
-    height: 80px;
-    width: 100%;
+  background: #0082e6;
+  height: 80px;
+  width: 100%;
 }
 
 label.logo {
-    color: white;
-    font-size: 35px;
-    line-height: 80px;
-    padding: 0 100px;
-    font-weight: bold;
+  color: white;
+  font-size: 35px;
+  line-height: 80px;
+  padding: 0 100px;
+  font-weight: bold;
 }
 
 nav ul {
-    float: right;
-    margin-right: 20px;
+  float: right;
+  margin-right: 20px;
 }
 
 nav ul li {
-    display: inline-block;
-    line-height: 80px;
-    margin: 0 5px;
+  display: inline-block;
+  line-height: 80px;
+  margin: 0 5px;
 }
 
 nav ul li a {
-    color: white;
-    font-size: 17px;
-    padding: 7px 13px;
-    border-radius: 3px;
-    text-transform: uppercase;
+  color: white;
+  font-size: 17px;
+  padding: 7px 13px;
+  border-radius: 3px;
+  text-transform: uppercase;
 }
 
 a.active,
 a:hover {
-    background: #1b9bff;
-    transition: .5s;
+  background: #1b9bff;
+  transition: 0.5s;
 }
 
 .checkbtn {
-    font-size: 30px;
-    color: white;
-    float: right;
-    line-height: 80px;
-    margin-right: 40px;
-    cursor: pointer;
-    display: none;
+  font-size: 30px;
+  color: white;
+  float: right;
+  line-height: 80px;
+  margin-right: 40px;
+  cursor: pointer;
+  display: none;
 }
 
 #check {
-    display: none;
+  display: none;
 }
 
-@media(max-width:952px) {
-    label.logo {
-        font-size: 30px;
-        padding-left: 50px;
-    }
+@media (max-width: 952px) {
+  label.logo {
+    font-size: 30px;
+    padding-left: 50px;
+  }
 
-    nav ul li a {
-        font-size: 16px;
-    }
+  nav ul li a {
+    font-size: 16px;
+  }
 }
 
-@media(max-width:700px) {
-    .checkbtn {
-        display: block;
-    }
+@media (max-width: 700px) {
+  .checkbtn {
+    display: block;
+  }
 
-    ul {
-        position: fixed;
-        width: 100%;
-        height: 100vh;
-        background: #2c3e50;
-        top: 80px;
-        left: -100%;
-        text-align: center;
-        transition: all .5s;
-    }
+  ul {
+    position: fixed;
+    width: 100%;
+    height: 100vh;
+    background: #2c3e50;
+    top: 80px;
+    left: -100%;
+    text-align: center;
+    transition: all 0.5s;
+  }
 
-    nav ul li {
-        display: block;
-        margin: 50px 0;
-        line-height: 30px;
-    }
+  nav ul li {
+    display: block;
+    margin: 50px 0;
+    line-height: 30px;
+  }
 
-    nav ul li a {
-        font-size: 20px;
-    }
+  nav ul li a {
+    font-size: 20px;
+  }
 
-    a:hover,
-    a.active {
-        background: none;
-        color: #0082e6;
-    }
+  a:hover,
+  a.active {
+    background: none;
+    color: #0082e6;
+  }
 
-    #check:checked~ul {
-        left: 0;
-    }
+  #check:checked ~ ul {
+    left: 0;
+  }
 }
 
 .container {
-    margin-left: 20px;
-    margin-top: 20px;
-    margin-right: 20px;
-    margin-bottom: 20px;
-    height: 650px;
-    /* display: flex;
+  margin-left: 20px;
+  margin-top: 20px;
+  margin-right: 20px;
+  margin-bottom: 20px;
+  height: 650px;
+  /* display: flex;
     justify-content: space-around; */
-    backdrop-filter: blur(4px);
-    border: 3px solid black ;border-radius: 12px;
+  backdrop-filter: blur(4px);
+  border: 3px solid black;
+  border-radius: 12px;
 }
 
 #judul {
-    width: 100%;
-    display: flex;
-    justify-content: space-around;
-    margin-bottom: 20px;
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+  margin-bottom: 20px;
 }
 
 #buy {
-    display: flex;
-    justify-content: space-around;
+  display: flex;
+  justify-content: space-around;
 }
 
 #money {
-    margin-top: 10px;
-    width: 200px;
-    height: 100px;
+  margin-top: 10px;
+  width: 200px;
+  height: 100px;
 }
 
 #moneyCount {
-    font-size: 50px;
+  font-size: 50px;
 }
 
 #upgrade {
-    width: 200px;
-    height: 500px;
-    /* border: 3px solid green; */
+  width: 200px;
+  height: 500px;
+  /* border: 3px solid green; */
 }
 
-#pet{
-    width: 100%;
-    text-align: center;
+#pet {
+  width: 100%;
+  text-align: center;
 }
 
 #pet img {
-    width: 400px;
-    margin-top: 20px;
-    /* background-color: yellow; */
-
+  width: 400px;
+  margin-top: 20px;
+  /* background-color: yellow; */
 }
 
 #pet button {
-    width: 40px;
-    height: 40px;
+  width: 40px;
+  height: 40px;
 }
 
 #clicker {
-    margin-top: 10px;
-    width: 200px;
-    height: 600px;
+  margin-top: 10px;
+  width: 200px;
+  height: 600px;
 }
 
 #up {
-    align-items: center;
-    text-align: center;
-    margin-top: -50px;
+  align-items: center;
+  text-align: center;
+  margin-top: -50px;
 }
 
 #up img {
-    width: 180px;
-    margin-bottom: -70px;
+  width: 180px;
+  margin-bottom: -70px;
 }
 
 #up p {
-    font-size: 32px;
+  font-size: 32px;
 }
 
 #up button {
-    background-color: rgba(249, 249, 249, 0.398);
-    border-radius: 12px;
-    width: 70px;
+  background-color: rgba(249, 249, 249, 0.398);
+  border-radius: 12px;
+  width: 70px;
 }
 
-#clicker{
-    text-align: center;
-    display: grid;
-    grid-template-columns: 200px;
+#clicker {
+  text-align: center;
+  display: grid;
+  grid-template-columns: 200px;
 }
-#clicker div button{
-    margin-top: 40px;
-    width: 180px;
-    height: 180px;
-    background-color: rgba(249, 249, 249, 0.398);
-    border-radius: 50%;
+#clicker div button {
+  margin-top: 40px;
+  width: 180px;
+  height: 180px;
+  background-color: rgba(249, 249, 249, 0.398);
+  border-radius: 50%;
 }
