--- a/main.css
+++ b/main.css
@@ -26,7 +26,9 @@ header {
 .container {
   margin: 100px auto 0 auto;
   display: grid;
-  background-color: cadetblue;
+  background-image: url(./asset/pixelBG4.gif);
+  background-repeat:repeat-y;
+  background-size: 100%;
 }
 
 .shop-toggle {
@@ -44,7 +46,6 @@ header {
   position: fixed;
   z-index: 1000;
   inset: 0 70% 0 0;
-  background-color: chartreuse;
   flex-direction: column;
   padding: min(30vh, 10rem) 2em;
   transform: translateX(-100%);
@@ -57,7 +58,7 @@ header {
 
 .upgrade {
   width: 400px;
-  background-color: crimson;
+  margin-top: 20px;
   display: flex;
   margin-left: auto;
   margin-right: auto;
@@ -80,6 +81,20 @@ header {
     position: relative;
     transform: translate(0%);
   }
+  .container {
+    margin: 100px auto 0 auto;
+    display: grid;
+    background-image: url(./asset/pixelBG4.gif);
+    background-repeat: repeat-y;
+    background-size: 100%;
+  }
+  #characterpet {
+    width: 300px;
+    height: 300px;
+    display: flex;
+    justify-content: center;
+    padding: 50px;
+  }
 }
 
 #pet {
@@ -87,7 +102,6 @@ header {
 }
 
 #clicker {
-  background-color: blueviolet;
   display: flex;
 }
 
@@ -156,4 +170,41 @@ header {
     top: 3rem;
     right: 3rem;
   }
+}
+
+#duitid{
+  text-align: center;
+  font-size: 40px;
+}
+
+button{
+  border-radius: 10px;
+  background-color: rgba(240, 248, 255, 0.496);
+}
+button:hover{
+  border-radius: 10px;
+  background-color: rgb(240, 248, 255);
+}
+
+#upgrades{
+  border: solid rgba(0, 0, 0, 0);
+  border-radius: 10px;
+  margin-top: 10px;
+  background-color: rgba(240, 248, 255, 0.6);
+  backdrop-filter: blur(5px);
+  margin-right: 50px;
+  display: grid;
+  grid-template-columns: 1fr;
+  text-align: center;
+}
+
+#shoptext{
+  font-size: 70px;
+  margin-top: -10px;
+  margin-bottom: -20px;
+}
+
+.logo img{
+  width: 80px;
+  margin-left: 20px;
 }
