--- a/about.css
+++ b/about.css
@@ -117,7 +117,17 @@ p{
    font-size: 11px;
 }
 
-
+#referensi {
+    margin-left: 30px;
+    margin-right: 20px;
+    margin-top: 20px;
+}
+#referensi label{
+    font-family: Arial, Helvetica, sans-serif;
+    margin-right: 20px;
+    margin-top: 20px;
+    font-size: 30px;
+}
 
 
 
