--- a/about.css
+++ b/about.css
@@ -1,267 +1,224 @@
-* {
-    padding: 0;
-    margin: 0;
-    text-decoration: none;
-    list-style: none;
-    box-sizing: border-box;
-}
-
 body {
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-
+  overflow-x: hidden;
+  /* background-image: url("./asset/pixelBG.gif"); */
 }
 
-nav {
-    background: #0082e6;
-    height: 80px;
-    width: 100%;
+header {
+  background-color: darkcyan;
+  font-size: 28px;
+  position: fixed;
+  width: 100%;
+  top: 0;
+  right: 0;
+  z-index: 1000;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
-label.logo {
-    color: white;
-    font-size: 35px;
-    line-height: 80px;
-    margin-left: 50px;
-    font-weight: bold;
+.logo img {
+  width: 80px;
+  height: 80px;
+  margin-left: 20px;
 }
 
-nav ul {
-    float: right;
-    margin-right: 20px;
+#navbar {
+  display: flex;
+  background: hsl(0, 0%, 100%, 0.1);
+  backdrop-filter: blur(1rem);
 }
 
-nav ul li {
-    display: inline-block;
-    line-height: 80px;
-    margin: 0 5px;
+#navbar li {
+  list-style: none;
+  padding: 0;
+  margin: 0;
 }
 
-nav ul li a{
-    color: white;
-    font-size: 17px;
-    padding: 7px 13px;
-    border-radius: 3px;
-    text-transform: uppercase;
+#navbar a {
+  text-decoration: none;
+  color: white;
+  padding: 5px;
+  margin: 15px;
 }
 
-a.active, a:hover{
-    background: #1b9bff;
-    transition: .5s;
+#navbar li:hover,
+#navbar li.active {
+  background-color: brown;
 }
 
-.checkbtn{
-    font-size: 30px;
-    color: white;
-    float: right;
-    line-height: 80px;
-    margin-right: 40px;
-    cursor: pointer;
-    display: none;
-}
-#check{
-    display: none;
+.container {
+  margin: 100px auto 0 auto;
+  display: grid;
 }
 
-
-
-#container{
-    width: auto;
-    margin-left: 20px;
-    margin-right: 20px;
-    margin-top: 20px;
-    margin-bottom: 50px;
-
+#about {
+  font-family: Arial, Helvetica, sans-serif;
+  margin-left: 30px;
+  margin-right: 20px;
+  margin-top: 20px;
+  font-size: 30px;
 }
 
-#about{
+#profil {
+  width: auto;
+  margin-left: 30px;
+  margin-right: 20px;
+  /* display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr; */
+  display: flex;
+  justify-content: flex-start;
+  margin-top: 10px;
+}
+
+#data {
+  height: 360px;
+  width: 200px;
+  background-color: gainsboro;
+  margin-right: 30px;
+}
+
+img {
+  width: 200px;
+  height: 200px;
+}
+
+h4 {
+  margin: 10px;
+  font-size: 11px;
+}
+p {
+  margin-left: 10px;
+  margin-top: none;
+  font-size: 11px;
+}
+
+#referensi {
+  margin-left: 30px;
+  margin-right: 20px;
+  margin-top: 20px;
+}
+#referensi label {
+  font-family: Arial, Helvetica, sans-serif;
+  margin-right: 20px;
+  margin-top: 20px;
+  font-size: 30px;
+}
+
+@media (max-width: 952px) {
+  #about {
     font-family: Arial, Helvetica, sans-serif;
     margin-left: 30px;
-    margin-right: 20px;
     margin-top: 20px;
-    font-size: 30px;
-    
-}
+    font-size: 25px;
+  }
 
-
-#profil{
-    width: auto;
+  #profil {
     margin-left: 30px;
     margin-right: 20px;
-    /* display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr; */
-    display: flex;
-    justify-content: flex-start;
-    margin-top: 10px;
-}
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+  }
 
-#data{
+  #data {
     height: 360px;
     width: 200px;
     background-color: gainsboro;
     margin-right: 30px;
+    margin-bottom: 20px;
+  }
+  nav ul li a {
+    font-size: 16px;
+  }
 }
-
-img{
-
-    width: 200px;
-    height: 200px;
-}
-
-h4{
-    margin: 10px;
-    font-size: 11px;
-}
-p{
-   margin-left: 10px;
-   margin-top: none; 
-   font-size: 11px;
-}
-
-#referensi {
+@media (max-width: 700px) {
+  #profil {
     margin-left: 30px;
     margin-right: 20px;
-    margin-top: 20px;
-}
-#referensi label{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+  }
+  #about {
     font-family: Arial, Helvetica, sans-serif;
+    margin-left: 30px;
+    margin-top: 20px;
+    font-size: 25px;
+  }
+
+  #data {
+    height: 360px;
+    width: 200px;
+    background-color: gainsboro;
+    margin-right: 30px;
+    margin-bottom: 20px;
+  }
+}
+
+@media (min-width: 780px) {
+  .mobile-nav-toggle {
+    display: none;
+  }
+}
+
+@media (max-width: 780px) {
+  #navbar {
+    --gap: 2em;
+    position: fixed;
+    z-index: 1000;
+    inset: 0 0 0 40%;
+    background: hsl(0, 0%, 100%, 0.1);
+    backdrop-filter: blur(1rem);
+    flex-direction: column;
+    padding: min(30vh, 10rem) 2em;
+    transform: translateX(100%);
+    transition: transform 350ms ease-out;
+  }
+
+  #navbar[data-visible="true"] {
+    transform: translateX(0%);
+  }
+
+  .mobile-nav-toggle {
+    position: absolute;
+    background: none;
+    z-index: 9999;
+    width: 3rem;
+    border: 0;
+    aspect-ratio: 1;
+    top: 3rem;
+    right: 3rem;
+  }
+
+  #container {
+    /* width: 100%; */
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    margin-left: 20px;
     margin-right: 20px;
     margin-top: 20px;
+    margin-bottom: 50px;
+  }
+
+  #profil {
+    margin-left: 30px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+  }
+
+  #about {
+    display: flex;
+    justify-content: space-around;
+    margin-left: 30px;
+    margin-top: 20px;
     font-size: 30px;
-}
+  }
 
-
-
-
-@media(max-width:952px){
-    label.logo {
-        color: white;
-        font-size: 30px;
-        line-height: 80px;
-        margin-left: 50px;
-        margin-right: 20px;
-        font-weight: bold;
-    }
-    #about{
-        font-family: Arial, Helvetica, sans-serif;
-        margin-left: 30px;
-        margin-top: 20px;
-        font-size: 25px;
-        
-    }
-    
-    
-    #profil{
-        margin-left: 30px;
-        margin-right: 20px;
-        display: grid;
-        grid-template-columns: 1fr 1fr 1fr;
-    
-    }
-
-    #data{
-        height: 360px;
-        width: 200px;
-        background-color: gainsboro;
-        margin-right: 30px;
-        margin-bottom: 20px;
-    }
-    nav ul li a{
-        font-size: 16px;
-    }
-
-   
-}
-@media(max-width:700px){
-    
-    #profil{
-        margin-left: 30px;
-        margin-right: 20px;
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-
-    
-    }
-    #about{
-        font-family: Arial, Helvetica, sans-serif;
-        margin-left: 30px;
-        margin-top: 20px;
-        font-size: 25px;
-        
-    }
-
-    #data{
-        height: 360px;
-        width: 200px;
-        background-color: gainsboro;
-        margin-right: 30px;
-        margin-bottom: 20px;
-    }
-    
-}
-
-@media (max-width:480px){
-    .checkbtn{
-        display: block;
-    }
-    ul{
-        position: fixed;
-        width: 100%;
-        height: 100vh;
-        background: #2c3e50;
-        top: 80px;
-        left: -100%;
-        text-align: center;
-        transition: all .5s;
-    }
-    nav ul li{
-        display: block;
-        margin: 50px 0;
-        line-height: 30px;
-    }
-    nav ul li a{
-        font-size: 20px;
-    }
-    a:hover,a.active{
-        background: none;
-        color: #0082e6;
-    }
-    #check:checked ~ ul{
-        left: 0;
-    }
-
-    #container{
-        /* width: 100%; */
-        display: flex;
-        flex-direction: column;
-        justify-content: space-around;
-        margin-left: 20px;
-        margin-right: 20px;
-        margin-top: 20px;
-        margin-bottom: 50px;
-    
-    }
-
-    #profil{
-        margin-left: 30px;
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: space-around;
-    
-    }
-    
-    #about{
-        display: flex;
-        justify-content: space-around;
-        margin-left: 30px;
-        margin-top: 20px;
-        font-size: 30px;
-    }
-
-    #data{
-        height: 360px;
-        width: 200px;
-        background-color: gainsboro;
-        margin-bottom: 20px;
-        margin-right: 0;
-    }
+  #data {
+    height: 360px;
+    width: 200px;
+    background-color: gainsboro;
+    margin-bottom: 20px;
+    margin-right: 0;
+  }
 }
