--- a/menu.css
+++ b/menu.css
@@ -10,6 +10,10 @@ body {
   font-size: 64px;
   text-align: center;
   font-weight: bold;
+  margin-top: -20px;
+}
+#title1{
+  margin-top: -30px;
 }
 .menu {
   display: flex;
