--- a/main.css
+++ b/main.css
@@ -1,7 +1,7 @@
 body {
   overflow-x: hidden;
   /* background-image: url("./asset/pixelBG.gif"); */
-  background-color: darkcyan;
+  background-image: url(./asset/pemandangan.jpg);
   background-size: cover;
 }
 
@@ -27,8 +27,9 @@ header {
   margin: 100px auto 0 auto;
   display: grid;
   background-image: url(./asset/pixelBG4.gif);
-  background-repeat:repeat-y;
+  border: 2px solid rgba(0, 0, 0, 0);border-radius: 10px;
   background-size: 100%;
+  height: 650px;
 }
 
 .shop-toggle {
@@ -91,8 +92,10 @@ header {
     margin: 100px auto 0 auto;
     display: grid;
     background-image: url(./asset/pixelBG4.gif);
-    background-repeat: repeat-y;
-    background-size: 100%;
+    background-size: 200%;
+    height: 400px;
+    border: 2px solid rgba(0, 0, 0, 0);border-radius: 10px;
+    margin-bottom:-150px;
   }
   #characterpet {
     width: 300px;
@@ -145,7 +148,7 @@ header {
 
 #navbar li:hover,
 #navbar li.active {
-  background-color: brown;
+  background-color: #343e47;
 }
 
 @media (max-width: 768px) {
@@ -222,4 +225,8 @@ button:hover{
 .multiplier button{
   margin-left: 10px;
   width: 100px;
+}
+#titletext{
+  margin-right: auto;
+  color: white;
 }
