--- a/about.css
+++ b/about.css
@@ -1,54 +1,76 @@
-body {
-  overflow-x: hidden;
-  /* background-image: url("./asset/pixelBG.gif"); */
-}
-
-header {
-  background-color: darkcyan;
-  font-size: 28px;
-  position: fixed;
-  width: 100%;
-  top: 0;
-  right: 0;
-  z-index: 1000;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-
-.logo img {
-  width: 80px;
-  height: 80px;
-  margin-left: 20px;
-}
-
-#navbar {
-  display: flex;
-  background: hsl(0, 0%, 100%, 0.1);
-  backdrop-filter: blur(1rem);
-}
-
-#navbar li {
-  list-style: none;
+* {
   padding: 0;
   margin: 0;
-}
-
-#navbar a {
   text-decoration: none;
+  list-style: none;
+  box-sizing: border-box;
+}
+
+body {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  background-image: url("./asset/pemandangan.jpg");
+}
+
+nav {
+  background-color: rgba(43, 48, 52, 0.667);
+  backdrop-filter: blur(5px);
+  height: 80px;
+  width: 100%;
+}
+
+label.logo {
+  color: rgb(186, 186, 186);
+  font-size: 35px;
+  line-height: 80px;
+  margin-left: 50px;
+  font-weight: bold;
+}
+
+nav ul {
+  float: right;
+  margin-right: 20px;
+}
+
+nav ul li {
+  display: inline-block;
+  line-height: 80px;
+  margin: 0 5px;
+}
+
+nav ul li a {
   color: white;
-  padding: 5px;
-  margin: 15px;
+  font-size: 17px;
+  padding: 7px 13px;
+  border-radius: 3px;
+  text-transform: uppercase;
 }
 
-#navbar li:hover,
-#navbar li.active {
-  background-color: brown;
+a.active,
+a:hover {
+  background-color: #343e47;
+  transition: 0.5s;
 }
 
-.container {
-  margin: 100px auto 0 auto;
-  display: grid;
+.checkbtn {
+  font-size: 30px;
+  color: white;
+  float: right;
+  line-height: 80px;
+  margin-right: 40px;
+  cursor: pointer;
+  display: none;
+}
+#check {
+  display: none;
+}
+
+#container {
+  width: auto;
+  margin-left: 20px;
+  margin-right: 20px;
+  margin-top: 20px;
+  margin-bottom: 50px;
 }
 
 #about {
@@ -63,21 +85,42 @@ header {
   width: auto;
   margin-left: 30px;
   margin-right: 20px;
-  /* display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr; */
-  display: flex;
-  justify-content: flex-start;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  /* display: flex;
+    justify-content: flex-start; */
   margin-top: 10px;
 }
 
 #data {
   height: 360px;
   width: 200px;
-  background-color: gainsboro;
+  background-color: rgba(240, 248, 255, 0.496);
+  border-radius: 10px;
   margin-right: 30px;
 }
 
+#data:hover {
+  height: 380px;
+  width: 220px;
+  background-color: #343e47;
+  color: #fff;
+  margin-right: 30px;
+  padding-right: 10px;
+  padding-left: 10px;
+  padding-top: 10px;
+  transition: all 0.1s;
+  border-radius: 10px;
+}
+
 img {
+  border-radius: 10px 10px 0 0;
+  width: 200px;
+  height: 200px;
+}
+
+img:hover {
+  border-radius: 5px;
   width: 200px;
   height: 200px;
 }
@@ -92,19 +135,15 @@ p {
   font-size: 11px;
 }
 
-#referensi {
-  margin-left: 30px;
-  margin-right: 20px;
-  margin-top: 20px;
-}
-#referensi label {
-  font-family: Arial, Helvetica, sans-serif;
-  margin-right: 20px;
-  margin-top: 20px;
-  font-size: 30px;
-}
-
 @media (max-width: 952px) {
+  label.logo {
+    color: white;
+    font-size: 30px;
+    line-height: 80px;
+    margin-left: 50px;
+    margin-right: 20px;
+    font-weight: bold;
+  }
   #about {
     font-family: Arial, Helvetica, sans-serif;
     margin-left: 30px;
@@ -153,39 +192,35 @@ p {
   }
 }
 
-@media (min-width: 780px) {
-  .mobile-nav-toggle {
-    display: none;
+@media (max-width: 480px) {
+  .checkbtn {
+    display: block;
   }
-}
-
-@media (max-width: 780px) {
-  #navbar {
-    --gap: 2em;
+  ul {
     position: fixed;
-    z-index: 1000;
-    inset: 0 0 0 40%;
-    background: hsl(0, 0%, 100%, 0.1);
-    backdrop-filter: blur(1rem);
-    flex-direction: column;
-    padding: min(30vh, 10rem) 2em;
-    transform: translateX(100%);
-    transition: transform 350ms ease-out;
+    width: 100%;
+    height: 100vh;
+    background: #2c3e50;
+    top: 80px;
+    left: -100%;
+    text-align: center;
+    transition: all 0.5s;
   }
-
-  #navbar[data-visible="true"] {
-    transform: translateX(0%);
+  nav ul li {
+    display: block;
+    margin: 50px 0;
+    line-height: 30px;
   }
-
-  .mobile-nav-toggle {
-    position: absolute;
+  nav ul li a {
+    font-size: 20px;
+  }
+  a:hover,
+  a.active {
     background: none;
-    z-index: 9999;
-    width: 3rem;
-    border: 0;
-    aspect-ratio: 1;
-    top: 3rem;
-    right: 3rem;
+    color: #0082e6;
+  }
+  #check:checked ~ ul {
+    left: 0;
   }
 
   #container {
@@ -221,4 +256,16 @@ p {
     margin-bottom: 20px;
     margin-right: 0;
   }
+}
+
+#referensi {
+  margin-left: 30px;
+  margin-right: 20px;
+  margin-top: 50px;
+}
+#referensi label {
+  font-family: Arial, Helvetica, sans-serif;
+  margin-right: 20px;
+  margin-top: 20px;
+  font-size: 30px;
 }
