--- a/about.css
+++ b/about.css
@@ -13,7 +13,7 @@ body {
 
 nav {
     background-color: rgba(43, 48, 52, 0.667);
-    -webkit-backdrop-filter: blur(5px);
+    backdrop-filter: blur(5px);
     height: 80px;
     width: 100%;
 }
