--- a/main.css
+++ b/main.css
@@ -27,7 +27,7 @@ header {
   margin: 100px auto 0 auto;
   display: grid;
   background-image: url(./asset/pixelBG4.gif);
-  background-repeat:repeat-y;
+  background-repeat:no-repeat;
   background-size: 100%;
 }
 
@@ -85,8 +85,8 @@ header {
     margin: 100px auto 0 auto;
     display: grid;
     background-image: url(./asset/pixelBG4.gif);
-    background-repeat: repeat-y;
-    background-size: 100%;
+    background-repeat: no-repeat;
+    background-size: 200%;
   }
   #characterpet {
     width: 300px;
@@ -96,6 +96,7 @@ header {
     padding: 50px;
   }
 }
+
 
 #pet {
   background-color: maroon;
