--- a/main.css
+++ b/main.css
@@ -15,6 +15,8 @@ header {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  background-color: rgba(43, 48, 52, 0.667);
+  height: 95px;
 }
 
 #navbar {
@@ -161,7 +163,7 @@ header {
     position: fixed;
     z-index: 1000;
     inset: 0 0 0 40%;
-    background: hsl(0, 0%, 100%, 0.1);
+    background-color: rgba(43, 48, 52, 0.667);
     backdrop-filter: blur(1rem);
     flex-direction: column;
     padding: min(30vh, 10rem) 2em;
