--- a/about.css
+++ b/about.css
@@ -12,19 +12,22 @@ body {
   background-image: url("./asset/pemandangan.jpg");
 }
 
-nav {
-  background-color: rgba(43, 48, 52, 0.667);
-  backdrop-filter: blur(5px);
-  height: 80px;
+header {
+  font-size: 28px;
+  position: fixed;
   width: 100%;
+  top: 0;
+  right: 0;
+  z-index: 1000;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
-label.logo {
-  color: rgb(186, 186, 186);
-  font-size: 35px;
-  line-height: 80px;
-  margin-left: 50px;
-  font-weight: bold;
+#navbar {
+  display: flex;
+  background: hsl(0, 0%, 100%, 0.1);
+  backdrop-filter: blur(1rem);
 }
 
 nav ul {
@@ -52,24 +55,11 @@ a:hover {
   transition: 0.5s;
 }
 
-.checkbtn {
-  font-size: 30px;
-  color: white;
-  float: right;
-  line-height: 80px;
-  margin-right: 40px;
-  cursor: pointer;
-  display: none;
-}
-#check {
-  display: none;
-}
-
-#container {
+.container {
   width: auto;
   margin-left: 20px;
   margin-right: 20px;
-  margin-top: 20px;
+  margin-top: 120px;
   margin-bottom: 50px;
 }
 
@@ -133,6 +123,48 @@ p {
   margin-left: 10px;
   margin-top: none;
   font-size: 11px;
+}
+
+@media (min-width: 768px) {
+  .mobile-nav-toggle {
+    display: none;
+  }
+
+  #navbar {
+    --gap: clamp(1.5rem, 5vw, 3rem);
+    padding-block: 1rem;
+    padding-inline: clamp(3rem, 10vw, 10rem);
+  }
+}
+
+@media (max-width: 768px) {
+  #navbar {
+    --gap: 2em;
+    position: fixed;
+    z-index: 1000;
+    inset: 0 0 0 40%;
+    background: hsl(0, 0%, 100%, 0.1);
+    backdrop-filter: blur(1rem);
+    flex-direction: column;
+    padding: min(30vh, 10rem) 2em;
+    transform: translateX(100%);
+    transition: transform 350ms ease-out;
+  }
+
+  #navbar[data-visible="true"] {
+    transform: translateX(0%);
+  }
+
+  .mobile-nav-toggle {
+    position: absolute;
+    background: none;
+    z-index: 9999;
+    width: 3rem;
+    border: 0;
+    aspect-ratio: 1;
+    top: 3rem;
+    right: 3rem;
+  }
 }
 
 @media (max-width: 952px) {
@@ -268,4 +300,10 @@ p {
   margin-right: 20px;
   margin-top: 20px;
   font-size: 30px;
+}
+
+.logo img {
+  width: 80px;
+  height: 80px;
+  margin-left: 20px;
 }
