--- a/main.css
+++ b/main.css
@@ -1,7 +1,7 @@
 body {
   overflow-x: hidden;
   /* background-image: url("./asset/pixelBG.gif"); */
-  background-image: url(./asset/pemandangan.jpg);
+  background-color: darkcyan;
   background-size: cover;
 }
 
@@ -15,8 +15,6 @@ header {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  background-color: rgba(43, 48, 52, 0.667);
-  height: 95px;
 }
 
 #navbar {
@@ -29,13 +27,8 @@ header {
   margin: 100px auto 0 auto;
   display: grid;
   background-image: url(./asset/pixelBG4.gif);
-<<<<<<< HEAD
   background-repeat: repeat-y;
-=======
-  border: 2px solid rgba(0, 0, 0, 0);border-radius: 10px;
->>>>>>> c8c5c7b (fix all css)
   background-size: 100%;
-  height: 650px;
 }
 
 .shop-toggle {
@@ -77,12 +70,6 @@ header {
   justify-content: center;
   padding: 50px;
 }
-#characterpet img {
-  width: 200px;
-  display: flex;
-  justify-content: center;
-  padding: 50px;
-}
 
 @media (max-width: 768px) {
   .shop-toggle {
@@ -98,10 +85,8 @@ header {
     margin: 100px auto 0 auto;
     display: grid;
     background-image: url(./asset/pixelBG4.gif);
-    background-size: 200%;
-    height: 400px;
-    border: 2px solid rgba(0, 0, 0, 0);border-radius: 10px;
-    margin-bottom:-150px;
+    background-repeat: repeat-y;
+    background-size: 100%;
   }
   #characterpet {
     width: 300px;
@@ -154,7 +139,7 @@ header {
 
 #navbar li:hover,
 #navbar li.active {
-  background-color: #343e47;
+  background-color: brown;
 }
 
 @media (max-width: 768px) {
@@ -163,7 +148,7 @@ header {
     position: fixed;
     z-index: 1000;
     inset: 0 0 0 40%;
-    background-color: rgba(43, 48, 52, 0.667);
+    background: hsl(0, 0%, 100%, 0.1);
     backdrop-filter: blur(1rem);
     flex-direction: column;
     padding: min(30vh, 10rem) 2em;
@@ -223,22 +208,3 @@ button:hover {
   width: 80px;
   margin-left: 20px;
 }
-<<<<<<< HEAD
-=======
-
-.autoclicker button{
-  margin-right: 10px;
-  width: 100px;
-}
-.multiplier button{
-  margin-left: 10px;
-  width: 100px;
-}
-<<<<<<< HEAD
->>>>>>> 2832880 (css all index main)
-=======
-#titletext{
-  margin-right: auto;
-  color: white;
-}
->>>>>>> c8c5c7b (fix all css)
